遍历代码